--- a/weathersite/gallery.html
+++ b/weathersite/gallery.html
@@ -2,15 +2,15 @@
 <html lang="en-us">
 <head>
   <meta charset="UTF-8">
-  <title>Heather Schmidtlein WDD 230 Assignment Portal</title>
+  <title>Gallery Images for Weathersite</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Design Principles for Heather Schmidtlein in WDD 230: Web Frontend Development at Brigham Young University - Idaho">
   <link href="https://fonts.googleapis.com/css2?family=Cormorant+SC:wght@300&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Cormorant+SC:wght@300&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="heatherrosea.github.io/normalize.css">
-  <link rel="stylesheet" type="text/css" href="/heatherrosea.github.io/preston-css-small.css">
-  <link rel="stylesheet" type="text/css" href="/heatherrosea.github.io/preston-css-medium.css">
-  <link rel="stylesheet" type="text/css" href="/heatherrosea.github.io/preston-css-large.css">      
+  <link rel="stylesheet" type="text/css" href="/heatherrosea.github.io/weathersite/gallery-small.css">
+  <link rel="stylesheet" type="text/css" href="/heatherrosea.github.io/weathersite/gallery-medium.css">
+  <link rel="stylesheet" type="text/css" href="/heatherrosea.github.io/weathersite/gallery-large.css">      
   <link rel="shortcut icon" href="https://cdn.glitch.com/b753ac26-8568-4b97-806e-2968b8866a27%2Ffavicon%20(3).ico?v=1602967366914">
 </head>
   
@@ -95,19 +95,16 @@
           </figure>  
         </div>
 
-    </section>
-    
-
+    </section>    
   
 
     </main>
   
   <footer> &copy; <span id="year"></span> | Forecasted | Attributions | Heather Schmidtlein
   <br><span id="date"></span></footer> 
-  <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
- <script type="text/javascript" src="/heatherrosea.github.io/preston-js.js"></script>
-  <script type="text/javascript" src="/heatherrosea.github.io/windchill.js"></script>
-    <script type="text/javascript" src="/heatherrosea.github.io/lazyload.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
+  <script src="/heatherrosea.github.io/weathersite/index.js"></script>
+  <script src="/heatherrosea.github.io/weathersite/lazyload.js"></script>
 
 
 </body>
