--- a/weathersite/preston.html
+++ b/weathersite/preston.html
@@ -83,6 +83,8 @@
         </div>
     </section>
     
+     <div class="preston-events"></div>
+    
     <section id="article">
         <h3>PRESTON GETS FIRST SNOWFALL OF THE SEASON</h3>
       <div id="article-body">    
@@ -118,6 +120,7 @@
   <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
   <script src="/heatherrosea.github.io/weathersite/index.js"></script>
   <script src="/heatherrosea.github.io/weathersite/weatherapi.js"></script>
+  <script src="/heatherrosea.github.io/weathersite/preston-events.js"></script>
 
 </body>
 </html>  
