--- a/weathersite/sodasprings.html
+++ b/weathersite/sodasprings.html
@@ -83,6 +83,8 @@
         </div>
     </section>
     
+    <div class="soda-events"></div>
+    
     <section id="article">
         <h3>NEW RESTAURANT DOWNTOWN OPENS UP DOORS</h3>
       <div id="article-body">    
