--- a/weathersite/gallery.html
+++ b/weathersite/gallery.html
@@ -50,47 +50,47 @@
           <div class="weather-gallery">
             
             <figure id="one">  
-            <img class="gallery" src="https://cdn.glitch.com/a6283d1d-cd6e-402a-8627-ec9f9fdbb65c%2Fivan-vranic-ifpIUxbtu7M-unsplash.jpg?v=1614573160398" alt="Stormy Grassland">
+            <img class="gallery" src="https://cdn.glitch.com/a6283d1d-cd6e-402a-8627-ec9f9fdbb65c%2F1.jpg?v=1616304245561" alt="Stormy Grassland">
             <figcaption>Stormy Grassland Sky</figcaption>
           </figure>  
 
           <figure id="two">  
-            <img class="gallery" src="https://cdn.glitch.com/a6283d1d-cd6e-402a-8627-ec9f9fdbb65c%2Feugene-triguba-Cm5zI68Wdew-unsplash-min.jpg?v=1614573161575" alt="Lightning in Field">
+            <img class="gallery" src="https://cdn.glitch.com/a6283d1d-cd6e-402a-8627-ec9f9fdbb65c%2F2.jpg?v=1616304378696" alt="Lightning in Field">
             <figcaption>Lightning in Field</figcaption>
           </figure>  
 
           <figure id="three">  
-            <img class="gallery" src="https://cdn.glitch.com/a6283d1d-cd6e-402a-8627-ec9f9fdbb65c%2Fjason-blackeye-GPPAjJicemU-unsplash.jpg?v=1614573162823" alt="Mountain Sunset">
+            <img class="gallery" src="https://cdn.glitch.com/a6283d1d-cd6e-402a-8627-ec9f9fdbb65c%2F3.jpg?v=1616304470151" alt="Mountain Sunset">
             <figcaption>Mountain Sunset</figcaption>
           </figure>  
 
           <figure id="four">  
-            <img class="gallery" src="https://cdn.glitch.com/a6283d1d-cd6e-402a-8627-ec9f9fdbb65c%2Fmckayla-crump-AjmBvSj_2IE-unsplash.jpg?v=1614573167796" alt="Daybreak over Lake">
+            <img class="gallery" src="https://cdn.glitch.com/a6283d1d-cd6e-402a-8627-ec9f9fdbb65c%2F4.jpg?v=1616304567722" alt="Daybreak over Lake">
             <figcaption>Daybreak over Lake</figcaption>
           </figure>  
 
           <figure id="five">  
-            <img class="gallery"  src="https://cdn.glitch.com/a6283d1d-cd6e-402a-8627-ec9f9fdbb65c%2Fnikolas-noonan-Uw0FsLHXKLM-unsplash.jpg?v=1614573169344" alt="Rural Tornado">
+            <img class="gallery"  src="https://cdn.glitch.com/a6283d1d-cd6e-402a-8627-ec9f9fdbb65c%2F5.jpg?v=1616304625468" alt="Rural Tornado">
             <figcaption>Rural Tornado</figcaption>
           </figure>  
 
           <figure id="six">  
-            <img class="gallery" src="https://cdn.glitch.com/a6283d1d-cd6e-402a-8627-ec9f9fdbb65c%2Fsergey-kuznetsov-23cvKA_MrAI-unsplash.jpg?v=1614573178197" alt="Melting Lake Ice">
+            <img class="gallery" src="https://cdn.glitch.com/a6283d1d-cd6e-402a-8627-ec9f9fdbb65c%2F6.jpg?v=1616304686127" alt="Melting Lake Ice">
             <figcaption>Melting Lake Ice</figcaption>
           </figure>  
           
           <figure id="seven">  
-            <img class="gallery" src="https://cdn.glitch.com/a6283d1d-cd6e-402a-8627-ec9f9fdbb65c%2Fstainless-images-JzCf5Y3XmFU-unsplash.jpg?v=1614573183162" alt="Rainbow in the Field">
+            <img class="gallery" src="https://cdn.glitch.com/a6283d1d-cd6e-402a-8627-ec9f9fdbb65c%2F7.jpg?v=1616304768641" alt="Rainbow in the Field">
             <figcaption>Rainbow in the Field</figcaption>
           </figure>  
 
           <figure id="eight">  
-            <img class="gallery"  src="https://cdn.glitch.com/a6283d1d-cd6e-402a-8627-ec9f9fdbb65c%2Fstanley-dai-QLfjlyEamV4-unsplash.jpg?v=1614573187237" alt="Snow Capped Forest">
+            <img class="gallery"  src="https://cdn.glitch.com/a6283d1d-cd6e-402a-8627-ec9f9fdbb65c%2F8.jpg?v=1616304821278" alt="Snow Capped Forest">
             <figcaption>Snow Capped Forest</figcaption>
           </figure>  
 
           <figure id="nine">  
-            <img class="gallery" src="https://cdn.glitch.com/a6283d1d-cd6e-402a-8627-ec9f9fdbb65c%2Fthomas-tixtaaz-RA6vbIVis2Y-unsplash.jpg?v=1614573188344" alt="Misty Forest">
+            <img class="gallery" src="https://cdn.glitch.com/a6283d1d-cd6e-402a-8627-ec9f9fdbb65c%2F9.jpg?v=1616304869927" alt="Misty Forest">
             <figcaption>Misty Forest</figcaption>
           </figure>  
         </div>
