--- a/weathersite/preston.html
+++ b/weathersite/preston.html
@@ -83,7 +83,10 @@
         </div>
     </section>
     
-     <div class="preston-events"></div>
+  <section id="events">
+      <h3>Upcoming Events</h3>
+      <div class="preston-events"></div>
+  </section>
     
     <section id="article">
         <h3>PRESTON GETS FIRST SNOWFALL OF THE SEASON</h3>
