--- a/weathersite/sodasprings.html
+++ b/weathersite/sodasprings.html
@@ -125,6 +125,7 @@
   <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
   <script src="/heatherrosea.github.io/weathersite/index.js"></script>
   <script src="/heatherrosea.github.io/weathersite/sodaweatherapi.js"></script>
+  <script src="/heatherrosea.github.io/weathersite/soda-events.js"></script>
 
 </body>
 </html>  
