--- a/weathersite/fishhaven.html
+++ b/weathersite/fishhaven.html
@@ -123,6 +123,8 @@
   <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
   <script src="/heatherrosea.github.io/weathersite/index.js"></script>
   <script src="/heatherrosea.github.io/weathersite/fishhavenapi.js"></script>
+  <script src="/heatherrosea.github.io/weathersite/fish-events.js"></script>
+
 
 </body>
 </html>  
