--- a/weathersite/preston.html
+++ b/weathersite/preston.html
@@ -84,7 +84,7 @@
     </section>
     
   <section id="events">
-      <h3>Upcoming Events</h3>
+      <h3>UPCOMING EVENTS</h3>
       <div class="preston-events"></div>
   </section>
     
