--- a/weathersite/sodasprings.html
+++ b/weathersite/sodasprings.html
@@ -86,7 +86,7 @@
 
     
     <section id="events">
-      <h3>Upcoming Events</h3>
+      <h3>UPCOMING EVENTS</h3>
       <div class="soda-events"></div>
     </section>
     
